<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Fragment.HomeFragment"
    android:background="@color/colorWhite">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background_purple_rounded"
            android:padding="@dimen/padding_default"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/colorWhite"
                    android:textSize="10pt"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/backgroud_white_rounded"
                    >
                    <Spinner
                        android:id="@+id/spinner_country"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:spinnerMode="dialog"
                        android:layout_marginLeft="12dp" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feeling"
                    android:textSize="9pt"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feeling_description"
                    android:textSize="7pt"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="8dp"
                    android:lineSpacingExtra="5dp"
                    />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:background="@drawable/backgroud_red_button"
                    android:focusable="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_phone"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="20dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:layout_marginStart="10dp"
                        android:textSize="8pt"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:text="@string/call_now"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:background="@drawable/background_blue_button"
                    android:focusable="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_message_circle"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="18dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:layout_marginStart="8dp"
                        android:textSize="8pt"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:text="@string/send_sms"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preventing"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="8pt"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >
                <LinearLayout
                    android:id="@+id/layout_distancing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_distancing"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"
                        android:text="@string/Avoid_close_contact"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_hand_wash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/layout_mask"
                    android:layout_toEndOf="@+id/layout_distancing"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_hand_wash" />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"
                        android:text="@string/Clean_your_hands"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layout_mask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_mask"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"
                        android:text="@string/Wear_facemask"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/ic_helty_help"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/own_test"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="160dp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="8pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorWhite"
                android:text="@string/desc_own_test"
                android:layout_marginRight="15dp"
                android:textSize="7pt"
                android:lineSpacingExtra="5dp"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>