<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/province_layout"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/text_province"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/affected"
        android:text="Kalimantan Timur"
        android:textColor="@color/colorBlack"
        android:textSize="7pt"
        android:gravity="top"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/revored"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:background="@drawable/background_green"
        android:layout_marginEnd="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recoverd"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:textSize="5pt"
            android:layout_marginTop="2dp"
            />
        <TextView
            android:id="@+id/text_recovered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="6pt"
            android:text="9999"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/death"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:layout_toStartOf="@+id/revored"
        android:background="@drawable/background_red"
        android:layout_marginEnd="5dp"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/death"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:textSize="5pt"
            android:layout_marginTop="2dp"
            />
        <TextView
            android:id="@+id/text_death"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="6pt"
            android:text="9999"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/affected"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:background="@drawable/background_yellow"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/death"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/affected"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:layout_marginTop="2dp"
            android:textSize="5pt"
            />
        <TextView
            android:id="@+id/text_affected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="6pt"
            android:text="9999"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:textStyle="bold"
            />
    </LinearLayout>
</RelativeLayout>