<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.CountryFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_default"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@drawable/background_yellow"
                    android:layout_marginEnd="10dp"
                    >
                    <TextView
                        android:id="@+id/label_affected"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="10dp"
                        android:text="@string/affected"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/text_affected"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="27dp"
                        android:text="0"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="11pt"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@drawable/background_red"
                    android:layout_marginStart="10dp"
                    >
                    <TextView
                        android:id="@+id/label_death"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="10dp"
                        android:text="@string/death"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/text_death"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="27dp"
                        android:text="0"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="11pt"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@drawable/background_green"
                    android:layout_marginEnd="10dp"
                    >
                    <TextView
                        android:id="@+id/label_recovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="10dp"
                        android:text="@string/recoverd"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/text_recovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="0"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="9pt"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_blue"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/label_active"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="10dp"
                        android:text="@string/active"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/text_active"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="0"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="9pt"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_purple_soft"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/label_serious"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="10dp"
                        android:text="@string/serious"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/text_serious"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="0"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="9pt"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/background_top_rounded_white_small"
                android:padding="@dimen/padding_default"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cases By Province"
                    android:textSize="8pt"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/province_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/province_item"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>